swipe-fund-backend/swipefundbackend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: '2022-04-03T07:07:41+00:00'
  labels:
    io.kompose.service: swipefundbackend
  name: swipefundbackend
spec:
  ports:
    - name: '4000'
      port: 4000
      targetPort: 4000
  selector:
    io.kompose.service: swipefundbackend
status:
  loadBalancer: {}
